# code-challenge-mosano

./: .dockerignore  .env[model-it-shoul-not-be-here]  .gitignore  .gitlab-ci.yml  .sort.cfg  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  linter.sh  pyproject.toml
apps/got/: admin.py  apiviews.py  apps.py  models.py  serializers.py  tests.py  urls.py
dataset/: houses.csv  members.csv
main/: models.py  settings.py  urls.py
scripts/: create_database.py  db.py  insert_dataset.py
